syntax = "proto3";
package provenance.ledger.v1;

option go_package          = "github.com/provenance-io/provenance/x/ledger";
option java_package        = "io.provenance.ledger.v1";
option java_multiple_files = true;

import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

// Ledger
message Ledger {
  // Address of the NFT to which this ledger is linked.
  string nft_address = 1;

  // This denom will represent the entry values within the ledger.
  string denom = 3;
}

// LedgerEntryType
enum LedgerEntryType {
  LEDGER_ENTRY_TYPE_UNSPECIFIED  = 0 [(gogoproto.enumvalue_customname) = "Unspecified"];
  LEDGER_ENTRY_TYPE_DISBURSEMENT = 1 [(gogoproto.enumvalue_customname) = "Disbursement"];
  LEDGER_ENTRY_TYPE_PAYMENT      = 2 [(gogoproto.enumvalue_customname) = "Payment"];
  LEDGER_ENTRY_TYPE_FEE          = 3 [(gogoproto.enumvalue_customname) = "Fee"];
  LEDGER_ENTRY_TYPE_OTHER        = 4 [(gogoproto.enumvalue_customname) = "Other"];
}

// LedgerEntry
message LedgerEntry {
  // Unique uuid for a ledger entry.
  string uuid = 1;

  LedgerEntryType type = 2;

  google.protobuf.Timestamp posted_date = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  google.protobuf.Timestamp effective_date = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];

  string amt = 5 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  string prin_applied_amt = 6 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  string prin_bal_amt = 7 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  string int_applied_amt = 8 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  string int_bal_amt = 9 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  string other_applied_amt = 10 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  string other_bal_amt = 11 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];
}

// FlowStatus represents the current status of a flow
enum FundingTransferStatus {
  FUNDING_TRANSFER_STATUS_UNSPECIFIED = 0;
  FUNDING_TRANSFER_STATUS_PENDING     = 1;
  FUNDING_TRANSFER_STATUS_PROCESSING  = 2;
  FUNDING_TRANSFER_STATUS_COMPLETED   = 3;
  FUNDING_TRANSFER_STATUS_FAILED      = 4;
}

// FundTransferEntry represents a single fund transfer to process
message FundTransfer {
  string                ledger_entry_uuid = 1;
  string                amount            = 2;
  FundingTransferStatus status            = 3;
  string                memo              = 4;

  // The minimum block height or timestamp for settlement
  int64 settlement_block = 5;
}

// SettlementInstruction represents blockchain-specific settlement instructions
message SettlementInstruction {
  string amount = 1;

  // The recipient's blockchain address
  string recipient_address = 2;

  // The minimum block height or timestamp for settlement
  int64 settlement_block = 3;

  // Optional memo or note for the transaction
  string memo = 4;
}

// FundTransferEntryWithSettlement represents a fund transfer with settlement instructions
message FundTransferWithSettlement {
  string                         ledger_entry_uuid      = 1;
  repeated SettlementInstruction settlementInstructions = 4;
}
